# fastapi-oauth-async-authserver

./: .gitignore  README.md  commands  develop-demo.env  docker-develop.dockerfile  pyproject.toml
migrations/: env.py
migrations/versions/: 052a144f1167_first_migration.py  40943014ddeb_new_user_table.py  428e133612ee_first_migration.py  433fa82ceb99_edited_user.py  9077c40d9494_created_models.py  b1b08eb52852_create_login_log.py  b4ce56caeead_created_models.py  b8803837ee09_create_login_log.py  ce48d7acbeac_first_migration.py  d2de6550783e_first_migration.py  dc0e4a4d2015_create_login_log.py
setup/docker/: docker-compose.dev.yml
setup/scripts/: prestart.sh
src/: main.py
src/api/: deps.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: change_password.py  confirm_email.py  logout.py  token.py  users.py
src/core/: config.py  email.py  security.py
src/core/keys/: private.pem  public.pem
src/models/: base.py  change_password_token.py  confirm_email_token.py  login.py  pre_user.py  refresh_token.py  user.py
src/schemas/: authorization.py  error.py  success.py  user.py
src/templates/email/: confirm-email.html  resetpassword.html
